# web_manga_checker

./: .gitignore  Cargo.toml  GEMINI.md  README.md  async_ui_update_debug_summary.txt  geminiCLI_指示ログ.txt
extension/: background.js  content.js  manifest.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  SiteManager.jsx
pull_requests_txt/: pullrequest1.txt  pullrequest2feature_002-history-date-filtering.txt
src/: main.rs
